master
- Mayhem
  Various bug fixes.
  Add seconds as a supported Time Formatting specifier.

3.0.1
- aeosynth
  fix thread updating, possibly

3.0.0
- aeosynth
  'Quote Threading':              [false, 'Thread convsersations']
  'Rollover':                     [true,  'Index navigation will fallback to page navigation.']
  fix thread hiding
  allow auto-giffing of /gif/
  allow reply highlighting to de-highlight
  rm double highlighting of highlighted reply

2.30.1
- Mayhem
  Fix 4chan X not affecting fetched posts on Firefox Stable and Opera.

2.30.0
- Mayhem
  Support 4chan's new HTML.
  Add Spoiler indicator option in File Info Formatting
  Remove archive.no-ip.org archive redirections.

2.29.5
- Mayhem
  Fix QR filetype checking on /w/.

2.29.4
- Mayhem
  Auto-GIF will not run in /gif/.
  Fix QR filetype checking.

2.29.3
- Mayhem
  Update Quick Reply posting method, this fixes compatibility for uncommon browsers such as
    Opera Mobile 12 and Luakit for example.

2.29.2
- Mayhem
  Add HTTPS support.
  Ban support improvements and fixes.

2.29.1
- Mayhem
  Update posting support to use https with sys.4chan.org according to 4chan's latest change. This fixes the 'referer' error.
  Update redirection to installgentoo's archives.

2.29.0
- Mayhem
  New feature: Quote Resurrection, automatically linkifying dead quotes to archives.

2.28.1
- Mayhem
  General performance improvements.
  Threads will now be updated instantly after posting through the QR.
  Your own posts will not count toward the unread count after posting through the QR.
  Performance issues are now lessened with QR thumbnails of high-res pictures.
  You can now use Shift+Click on the file input to remove the selected reply's file.
  Reply navigation keybinds will now scroll as you navigate.
- noface
  Add unique ID to filter.

2.28.0
- ahodesuka
  Reply/Thread File Info Formatting:
    - Link: %l, %L (Original file names are shown inside threads).